<resources>
    <string name="app_name">ScoreMatchStatistics</string>
    <string name="tab_text_1">Registro</string>
    <string name="tab_text_2">Lectura Datos</string>
    <string name="tab_text_3">Galeria</string>
    <string name="txt_Username">Username</string>
    <string name="txt_Arena">Arena</string>
    <string name="Formacion">Formacion</string>
    <string name="txt_Capitan">Capitan</string>
    <string name="txt_NivelCapitan">Nivel capitan</string>
    <string name="txt_JugadoresEspeciales">Jugadores\nespeciales\ntotales</string>
    <string name="mensaje_exito">Se guardaron correctamente los datos</string>
    <string-array name="filtrar">
        <item>Arena</item>
        <item>Especiales</item>
        <item>Capitan</item>
        <item>Formacion</item>
        <item>NivelCapitan</item>
        <item>portero</item>
    </string-array>
    <string-array name="arenas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="formaciones">
        <item>4–4–2</item>
        <item>4–4–3–1</item>
        <item>3–5–2</item>
        <item>4–1–4–1</item>
        <item>5–3–2</item>
        <item>4–2–1–3</item>
        <item>5–2–1–2</item>
        <item>3–1–2–1–3</item>
        <item>4–3–3</item>
        <item>3–4–3</item>
        <item>4–1–2–3</item>
        <item>4–1–2–1–2</item>
    </string-array>
    <string-array name="capitanes">
        <item>infiltrador</item>
        <item>intruso</item>
        <item>motor</item>
        <item>amenaza</item>
        <item>comandante</item>
        <item>protector</item>
        <item>medoreador</item>
        <item>arquitecto</item>
        <item>guardia</item>
        <item>mazo</item>
        <item>productor</item>
        <item>explorador</item>
        <item>velocista</item>
    </string-array>
    <string-array name="tiposPorteros">
        <item>portero</item>
        <item>muro</item>
        <item>barreror</item>
    </string-array>
    <string name="txt_Enviar">Enviar</string>
    <string name="txt_texto_buscar_filtrado">Filtrar por</string>
    <string name="texto_buscar">Buscar</string>
    <string name="texto_actualizar">Actualizar</string>
    <string name="txt_mediafire">mediafire</string>
    <string name="mensajeAlertInternet">
        si deseas contestar el registro cierra la aplicacion activa el internet y vuelve a abrirla
        de lo contrario solo podras visualizar datos
    </string>
    <string name="tituloInternet">Internet</string>
    <string name="tituloEnvioRegistroYa">Ya has contestado el registro</string>
    <string name="mensajeRegistroYa">
        Ya has contestado el registro por lo cual solo
        podras visualizar los datos
    </string>
    <string name="tipo_portero">Tipo portero</string>
    <string name="test">Test</string>
    <string name="titulo_de_la_publicacioin">Titulo de la publicacioin</string>
    <string name="menu">Menu</string>
    <string name="message">Message</string>
    <string name="aceptar">Aceptar</string>
    <string name="descripcion_keene">
        Pelea los balones como nadienn y siempre tiene un ojo puesto
        en la punta del ataque para convertir una defensa en un contrataque.
    </string>
    <string name="aun_no_hay_ningun_registro">Aun no hay ningun registro</string>
    <string name="normal">Normal</string>
    <string name="golden">golden</string>
    <string name="superd">super</string>
    <string name="all">All</string>
</resources>