<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_registro"
    tools:context="ui.registration.RegistroFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/stye_txt_registro"
                android:text="@string/txt_Arena" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinerArena"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:entries="@array/arenas"
                android:spinnerMode="dialog" />

            <TextView
                style="@style/stye_txt_registro"
                android:text="@string/Formacion" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinerFormacion"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:entries="@array/formaciones"
                android:spinnerMode="dialog" />

            <TextView
                style="@style/stye_txt_registro"
                android:text="@string/txt_Capitan" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinerCapitan"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:entries="@array/capitanes"
                android:spinnerMode="dialog" />

            <TextView
                style="@style/stye_txt_registro"
                android:text="@string/txt_NivelCapitan" />

            <EditText
                android:id="@+id/txtNivelCapitan"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:hint="@string/txt_NivelCapitan"
                android:inputType="number"
                android:maxLength="2" />

            <TextView
                style="@style/stye_txt_registro"
                android:text="@string/tipo_portero" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinerTipoPortero"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:entries="@array/tiposPorteros"
                android:spinnerMode="dialog" />

            <TextView
                style="@style/stye_txt_registro"
                android:text="@string/txt_JugadoresEspeciales" />

            <EditText
                android:id="@+id/txtJugadoresEspeciales"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:autofillHints="totales"
                android:hint="@string/txt_JugadoresEspeciales"
                android:inputType="number"
                android:maxLength="2" />

            <Button
                android:id="@+id/btnEnviarRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="30dp"
                android:text="@string/txt_Enviar"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>